add readme context

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
     </nav>
+    <div class="intro-text">
+        Pokémon List  
+      </div>
 
     <div id="modal-container" ;></div>
     <ul class="pokemon-list list-group"></ul>
